# api_data_validation

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-ci.yml
tests/: test_cli.py  test_fetch.py  test_validate.py
